--- a/public/styles/quant.css
+++ b/public/styles/quant.css
@@ -48,6 +48,24 @@ body {
 }
 
 
+footer.section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 2rem;
+    background-color: var(--color-light-2);
+    color: var(--color-dark-2);
+}
+footer > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+footer > div > span {
+    margin: 0.2rem 0 0 0.5rem;
+}
+
 /*====================
         Text
 ======================*/
